# mcp-ortools

./: README.md  pyproject.toml  pyrightconfig.json
src/mcp_ortools/: __init__.py  adapters.py  parser.py  schema.py  server.py  solver.py  solver_manager.py
tests/: test_family_adapters.py  test_schema_and_server.py  test_solver_manager.py
